# proc-posets

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NEXT-SESSION-2026-07-18.md  NEXT-SESSION-2026-07-20.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 2026-07-20-fast-signature-extraction.md  2026-07-20-refactoring-plan.md  MIGRATION-PLAN.md  NEXT-SESSION-2026-07-21-1857.md  NEXT-SESSION-2026-07-21-2024.md  NEXT-SESSION-2026-07-21.md  NEXT-SESSION-2026-07-22.md  fast-extraction.md
examples/: README.md  compare_models.py
procposets/: __init__.py  _extensions.py  _numerics.py  _unionfind.py  bridge.py  decompose.py  diagnostics.py  discover.py  discrete.py  distance.py  equivalence.py  estimate.py  grouping.py  initialiser.py  likelihood.py  loops.py  matrix.py  moddecomp.py  npmle.py  oracle.py  poset.py  rel.py  rel_classes.py  rel_sp.py  simulate.py  traces.py
procposets/adapters/: __init__.py  from_bpmn.py  from_process_tree.py  outbound.py
procposets/cospan/: __init__.py  _boundary.py  _lmgraph_build.py  _ocel.py  class_extraction.py  compose.py  constraints.py  dag_diff.py  discovery_cleanup.py  engine.py  engine_fast.py  equivalence.py  extract_dp.py  faithful_simulate.py  feasibility.py  from_heuristics.py  from_ocpn.py  from_petri.py  lmgraph.py  morphism_schema.py  occurrence.py  signature.py  signature_compare.py  signature_diff.py  simulate.py  skeleton.py  splice.py  trace_language.py  typebalance.py  unroll.py  unroll_core.py
procposets/cospan/graph/: __init__.py
procposets/cospan/occn/: __init__.py
procposets/diagnostics/: __init__.py
procposets/occn/: __init__.py  _lift.py  fhm.py  markers.py  to_signature.py  unroll_occn.py
procposets/tests/: __init__.py  test_golden_analysis.py  test_golden_cospan.py  test_golden_estimation.py  test_golden_extensions.py  test_golden_ocel.py  test_golden_poset.py  test_golden_unroll.py  test_golden_viz.py  test_lazy_numpy.py  test_refinement.py  test_release_gate.py
procposets/tests/regression/: __init__.py  conftest.py  test_comparison_distance.py  test_comparison_estimate.py  test_comparison_loops.py  test_comparison_repeated_labels.py  test_cospan_compare_marginal.py  test_cospan_compose_factored.py  test_cospan_compose_running_example.py  test_cospan_constraints.py  test_cospan_crossmin_layout.py  test_cospan_engine_running_example.py  test_cospan_extract_cap.py  test_cospan_extract_fast.py  test_cospan_feasibility.py  test_cospan_morphism_schema.py  test_cospan_occurrence.py  test_cospan_silent_and_splits.py  test_cospan_skeleton.py  test_cospan_splice.py  test_cospan_termpath_readability.py  test_cospan_trace_language.py  test_cospan_typebalance.py  test_cpm_boundary_predicates.py  test_cpm_compose_loop_dedup.py  test_cpm_compose_running_example.py  test_cpm_engine_running_example.py  test_cpm_extract_cap.py  test_cpm_extract_fast.py  test_cpm_morphism_schema.py  test_cpm_occurrence.py  test_cpm_splice.py  test_cpm_surface_termini.py  test_cpm_trace_language.py  test_np_initialiser.py  test_np_likelihood.py  test_np_npmle.py  test_np_oracle.py  test_np_posets.py  test_npmle.py  (+9 more)
procposets/viz/: __init__.py  _layout.py  compare_vis.py  dag_render.py  occn_vis.py  palette.py  signature_diagram.py  spm_viz.py  string_diagram.py
