[project]
name = "procposets"
version = "0.1.0"
description = "Reusable poset / cospan / string-diagram calculation, simulation, estimation and comparison core for process-mining research."
readme = "README.md"
requires-python = ">=3.10"          # verified: no first-party source in any consumer repo uses >3.10 syntax
dependencies = ["numpy>=1.24"]      # the only hard runtime dep; Layer A0 + the cospan algebra (B0) are pure stdlib

# Lower bounds are kept 3.10-installable so the numpy-only core floor (>=3.10,
# required for the NPMLE path-dep) still yields a resolvable universal lock:
# uv fork-resolves each extra to a 3.10-compatible release on the 3.10 branch
# and the newest on 3.13.  The extras are actually exercised at 3.12/3.13
# (where SIM/SPME pin networkx 3.6.1 / pandas 3.0.3); consumers pin tighter.
[project.optional-dependencies]
graph = ["networkx>=3.1"]                                    # Layer B1: occurrence / splice / trace-language / DP extraction
pm4py = ["pm4py>=2.7.22.5", "pandas>=2.0", "networkx>=3.1"]  # Layer B2: model adapters (implies the graph paths)
viz   = ["matplotlib>=3.8", "graphviz>=0.21"]                # Layer C: renderers (dag_render also needs the `dot` binary)
all   = ["procposets[graph,pm4py,viz]"]

[dependency-groups]
dev = ["pytest>=9.1.1", "matplotlib>=3.10.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["procposets"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["procposets/tests"]
markers = [
  "graph: needs the [graph] extra (networkx)",
  "pm4py: needs the [pm4py] extra",
  "viz: needs the [viz] extra",
]
# inherited from the SIM repo: the networkx >=3.5 directed-graph WL-hash change is benign here
filterwarnings = ["ignore:The hashes produced for directed graphs changed:UserWarning"]
